# ai-influencer-studio-lib

./: README.md  pyproject.toml  requirements.txt  run_bot.py
studio/: __init__.py
studio/adapters/: __init__.py  handlers.py  telegram_bot.py  worker.py
studio/core/: __init__.py  download.py  engine.py  logging_utils.py  memory.py  models.py  pipeline.py  prompts.py
studio/schema/: __init__.py  errors.py  params.py  state.py
